[package]
name = "rhythm"
version = "0.0.2"
edition = "2021"
author = "Elliot Edmunds"
license = "MIT OR Apache-2.0"
description = "Rate limiter which allows VIPs, written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This project has no dependencies other than std

[dev-dependencies]
# This is needed for testing async functions, but is only included in dev builds
tokio = { version = "1", features = ["full"] }